regression/fail/overloading-context.4.sml
val x = 0.0
;
val _ = x: Real32.real
